--- a/landing-page/src/html/support-dev.html
+++ b/landing-page/src/html/support-dev.html
@@ -278,7 +278,7 @@ a:hover {
 .overlay-content {
     /*background-color: green;*/
     height: 70px;
-    width: 300px;
+    width: 400px;
     min-width: 300px;
     border: 4px solid white;
     cursor: pointer;
@@ -842,7 +842,7 @@ a:hover {
 		<div class="toggle-div">
 			<div class="overlay" id="overlay">
 				<div class="overlay-content" id="overlay-content-loc" onclick="switchSection(1)">
-					<p>Switch to<br />Local Governments and First Nations</p>
+					<p>Switch to<br />Indigenous Governing Bodies and Local Authorities</p>
 				</div>
 				<div class="overlay-content" id="overlay-content-ind" onclick="switchSection(0)" style="display: none;">
 					<p>Switch to<br />Individuals and Organizations</p>
@@ -867,7 +867,7 @@ a:hover {
 							<img class="--what-dfa-img" src="img/whatisdfa.svg" alt="DFA User Illustration">
 						</div>-->
 						<div class="what-dfa-description">
-							<p>For <b>Indigenous communities and local governments</b>, the DFA program may provide communities with financial assistance for damaged infrastructure.</p>
+							<p>For <b>Indigenous Governing Bodies and Local Authorities</b>, the DFA program may provide communities with financial assistance for damaged infrastructure.</p>
 							<a class="--link-light-blue" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa" target="_blank">Public Communities information… ></a>
 						</div>
 					</div>
@@ -907,8 +907,8 @@ a:hover {
 						<table style="width: 100%;">
 							<tr>
 								<td>
-									<p style="display:none" id="eventTextPublic">For Indigenous communities and local governments only, log in with your Business BCeID to create an application.</p>
-									<p id="noeventTextPublic">For Indigenous communities and local governments to check the status of your application, log in with your Business BCeID.</p>
+									<p style="display:none" id="eventTextPublic">For Indigenous Governing Bodies and Local Authorities only, log in with your Business BCeID to create an application.</p>
+									<p id="noeventTextPublic">For Indigenous Governing Bodies and Local Authorities to check the status of your application, log in with your Business BCeID.</p>
 					
 									<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 									<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
@@ -956,8 +956,7 @@ a:hover {
 						<h3>Contact Us</h3>
 						<p>For questions or more information, contact the Disaster Financial Assistance team
 						toll-free at <a class="--link-orange" href="tel:18882574777">1-888-257-4777</a> or by email at <a class="--link-orange" href="mailto:DFA.Private@gov.bc.ca">DFA.Private@gov.bc.ca</a> for individuals, small
-						<br>businesses, charitable organizations, and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for local
-						governments and Indigenous Governing Bodies.
+						<br>businesses, charitable organizations, and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for Indigenous Governing Bodies and Local Authorities.</p>
 						<p>Send DFA Technical Support inquiries <a class="--link-orange" href="mailto:DFA.private@gov.bc.ca">here</a>.</p>
 					</div>
 				</div>
