--- a/landing-page/src/html/index.prod-nomessage.new.html
+++ b/landing-page/src/html/index.prod-nomessage.new.html
@@ -278,7 +278,7 @@ a:hover {
 .overlay-content {
     /*background-color: green;*/
     height: 70px;
-    width: 300px;
+    width: 400px;
     min-width: 300px;
     border: 4px solid white;
     cursor: pointer;
@@ -625,6 +625,10 @@ a:hover {
 	width: 120px;
 }
 
+.contact-cta .container {
+	max-width: 900px;
+}
+
 /** Footer **/
 
 .site-footer {
@@ -722,14 +726,13 @@ a:hover {
 
 </style>
 <script type="text/javascript">
-	var privatePortal = 'https://dfa-portal-test.apps.silver.devops.gov.bc.ca'
-	var publicPortal = 'https://dfa-public-sector-test.apps.silver.devops.gov.bc.ca'
+	var privatePortal = 'https://portal.dfa.gov.bc.ca'
+	var publicPortal = 'https://publicsector.dfa.gov.bc.ca'
 
 	var apiPrivateUrl = privatePortal + '/api/eligibility/checkEventsAvailable';
 	var eventButtonPrivateUrl = privatePortal + '/verified-registration';
 	var noeventButtonPrivateUrl = privatePortal + '/verified-registration';
-
-<<<<<<<< HEAD:landing-page/src/html/project-test.html
+  
 	var apiPublicUrl = publicPortal + '/api/eligibility/checkPublicEventsAvailable';
 	var eventButtonPublicUrl = publicPortal + '/verified-registration'
 	var noeventButtonPublicUrl = publicPortal + '/verified-registration'
@@ -811,10 +814,9 @@ a:hover {
 			document.getElementById('overlay-content-loc').style.display = 'none';
 			document.getElementById('overlay-content-ind').style.display = 'block';
 			divOverlay.style.left = "0%";
-========
+
 		if (data > 0) {
 			document.getElementById('secAreEvacuated').style.display = 'block';
->>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
 		}
 	}
 
@@ -826,11 +828,7 @@ a:hover {
 	<header class="site-header">
 		<div class="container">
 			<div class="site-header-content">
-<<<<<<<< HEAD:landing-page/src/html/project-test.html
 				<a href="/" class="site-logo"><img src="https://dfa.gov.bc.ca/img/gov_bc_logo.svg" alt="Government of B.C."></a>
-========
-				<a href="/" class="site-logo"><img src="https://portal.dfa.gov.bc.ca/assets/images/bcid-logo-rev-en.svg" alt="Government of B.C."></a>
->>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
 			</div>
 		</div>
 	</header>
@@ -846,10 +844,7 @@ a:hover {
 					</div>
 				</div>
 			</div>
-		</section>
-<<<<<<<< HEAD:landing-page/src/html/project-test.html
-========
-		
+		</section>	
 
 		<section id="secAreEvacuated" class="are-evacuated"  style="display:none;">
 			<div class="container --are-evacuated-cols">
@@ -885,14 +880,12 @@ a:hover {
 			</div>
 		</section>
 
-
-<div class="grey-wrapper">
->>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
+  <div class="grey-wrapper">
 		
 		<div class="toggle-div">
 			<div class="overlay" id="overlay">
 				<div class="overlay-content" id="overlay-content-loc" onclick="switchSection(1)">
-					<p>Switch to<br />Local Governments and First Nations</p>
+					<p>Switch to<br />Indigenous Governing Bodies and Local Authorities</p>
 				</div>
 				<div class="overlay-content" id="overlay-content-ind" onclick="switchSection(0)" style="display: none;">
 					<p>Switch to<br />Individuals and Organizations</p>
@@ -917,14 +910,14 @@ a:hover {
 							<img class="--what-dfa-img" src="img/whatisdfa.svg" alt="DFA User Illustration">
 						</div>-->
 						<div class="what-dfa-description">
-							<p>For <b>Indigenous communities and local governments</b>, the DFA program may provide communities with financial assistance for damaged infrastructure.</p>
+							<p>For <b>Indigenous Governing Bodies and Local Authorities</b>, the DFA program may provide communities with financial assistance for damaged infrastructure.</p>
 							<a class="--link-light-blue" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa" target="_blank">Public Communities information… ></a>
 						</div>
 					</div>
 				</section>
 			</div>
 
-			<section id="secAreEvacuated" class="are-evacuated" >
+			<section id="secAreEvacuated" class="are-evacuated">
 				<div class="container --are-evacuated-cols">
 					<div class="are-evacuated-description">
 						<p>
@@ -957,8 +950,8 @@ a:hover {
 						<table style="width: 100%;">
 							<tr>
 								<td>
-									<p style="display:none" id="eventTextPublic">For Indigenous communities and local governments only, log in with your Business BCeID to create an application.</p>
-									<p id="noeventTextPublic">For Indigenous communities and local governments to check the status of your application, log in with your Business BCeID.</p>
+									<p style="display:none" id="eventTextPublic">For Indigenous Governing Bodies and Local Authorities only, log in with your Business BCeID to create an application.</p>
+									<p id="noeventTextPublic">For Indigenous Governing Bodies and Local Authorities to check the status of your application, log in with your Business BCeID.</p>
 					
 									<div id="divHomeOwnerButton" class="are-evacuated-registration center">
 									<!--<a class="btn btn--dark-blue btn--strong" href="">Check Eligible Events</a>-->
@@ -977,9 +970,7 @@ a:hover {
 						<p style="display:none" id="eventBottomTextPublic" class="fontweight90">Applications must be submitted within 90 days of the disaster being declared.</p>
 					</div>
 				</div>
-
 			</section>
-			
 		</div>
 
 
@@ -992,7 +983,7 @@ a:hover {
 						<a class="--link-light-blue register-dfa-link" href="https://dfa-portal-dev.apps.silver.devops.gov.bc.ca/registration-method" target="_blank">Already registered? Log in ></a>
 					</div>
 					<div class="register-dfa-image">
-						<img class="register-dfa-img" src="https://ess.gov.bc.ca/app/uploads/sites/931/2024/06/noun-umbrella-5817185-333333.png" alt="Umbrella Illustration">
+						<img class="register-dfa-img" src="https://ess.gov.bc.ca/img/preparedness.svg" alt="Umbrella Illustration">
 					</div>
 				</div>
 			</section>-->
@@ -1000,18 +991,13 @@ a:hover {
 			<section class="contact-cta">
 				<div class="container --contact-cta-layout">
 					<div class="contact-cta__content">
-<<<<<<<< HEAD:landing-page/src/html/project-test.html
 						<img class="contact-cta__icon" src="https://dfa.gov.bc.ca/img/contact.svg" alt="Phone Illustration">
-========
-						<img class="contact-cta__icon" src="https://ess.gov.bc.ca/app/uploads/sites/931/2024/06/noun-contact-4203636-1E5296-1.png" alt="Phone Illustration">
->>>>>>>> origin/support-develop:landing-page/src/html/index.prod-nomessage.html
 					</div>
 					<div class="contact-cta-description">
 						<h3>Contact Us</h3>
 						<p>For questions or more information, contact the Disaster Financial Assistance team
 						toll-free at <a class="--link-orange" href="tel:18882574777">1-888-257-4777</a> or by email at <a class="--link-orange" href="mailto:DFA.Private@gov.bc.ca">DFA.Private@gov.bc.ca</a> for individuals, small
-						<br>businesses, charitable organizations, and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for local
-						governments and Indigenous Governing Bodies.
+						<br>businesses, charitable organizations, and farms or <a class="--link-orange" href="mailto:DFA.Public@gov.bc.ca">DFA.Public@gov.bc.ca</a> for Indigenous Governing Bodies and Local Authorities.</p>
 						<p>Send DFA Technical Support inquiries <a class="--link-orange" href="mailto:DFA.private@gov.bc.ca">here</a>.</p>
 					</div>
 				</div>
